--- a/Files/2017/R_Analysis_Markdown_17.Rmd
+++ b/Files/2017/R_Analysis_Markdown_17.Rmd
@@ -20,9 +20,11 @@ Marathons hurt and wind is the embodiment of all that is evil. That's what I've 
 </center>
 <br>
 <br>
-So, last year, I followed the 18-week, 55-70 mile peak week plan from [<u>Pete Pfitzinger's Advanced Marathoning</u>](https://smile.amazon.com/Advanced-Marathoning-2nd-Pete-Pfitzinger/dp/0736074600). I blew up pretty bad around mile 20 to mile 22 (I don't remember, exactly, as my mind was busy focusing on the fact that  *it*. *hurt.*). This is apparently typical of first-time marathoners who aren't experienced enough to know if/when they'll hit the dreaded Wall and are typicall not being prepared to mentally and physically deal with it. And I was not. I fully remember my calves screaming and my hips almost fully tightening up in that last 10k. From this I just assumed that maybe I just didn't have the muscular endurance to last the whole race at a consistent pace, as I felt I was going to be able to maintain the comfortably-hard 6:50 minute per mile pace I was hitting prior to entering the pain cave. I decided to pick a higher mileage plan in hopes of remedying this, so I went with a sort-of ad-hoc modification based off of the 18 week/85 mile and 18 week/more than 85 mile plans from the same book, with most of the workouts taken as-is from the 85+ mile plan, with some extra miles here and there on some runs depending on how I felt at the time.
+So, last year, I followed the 18-week, 55-70 mile peak week plan from [<u>Pete Pfitzinger's Advanced Marathoning</u>](https://smile.amazon.com/Advanced-Marathoning-2nd-Pete-Pfitzinger/dp/0736074600). I blew up pretty bad around mile 20 to mile 22 (I don't remember, exactly, as my mind was busy focusing on the fact that  *it*. *hurt.*) This is apparently typical of first-time marathoners who aren't experienced enough to know if/when they'll hit the dreaded Wall and are typically not prepared to mentally and physically deal with it. And I was not. I fully remember my calves screaming and my hips almost fully tightening up in that last 10k, and from this I just assumed that maybe I just didn't have the muscular endurance to last the whole race at a consistent pace. For the majority of the race, I felt I was going to be able to maintain the comfortably-hard 6:50 minute per mile pace until the finish, and then I entered the pain cave. 
 
-```{r load dataset, echo = FALSE, message = FALSE, warning=FALSE}
+I decided to go with a higher mileage plan this year in hopes of remedying this, so I went with a sort-of ad-hoc modification based off of the 18 week/85 mile and 18 week/more than 85 mile plans from the same book, with most of the workouts taken as-is from the 85+ mile plan, with some extra miles here and there on some runs depending on how I felt at the time.
+
+```{r load dataset, echo=F, message=F, warning=F}
 library(tidyverse) # data cleaning and manipulation
 library(ggplot2) # plotting
 library(lubridate) # dates
@@ -52,7 +54,6 @@ philly %<>% select(-X) %>%
          Month = factor(Month, ordered = TRUE, 
                         levels = c("Jul","Aug","Sep","Oct","Nov")))
 
-#glimpse(philly)
 philly %>%
   group_by(MarathonName) %>%
   summarize(Count = n()) %>%
@@ -60,7 +61,7 @@ philly %>%
   kable(caption = "Total Number of Runs")
 ```
 
-There were a lot more runs and not just miles in this year's prep. This was pretty much all due to the double days (pretty much all of which consisted of double recovery runs), as well as the warm up and cool downs of two tune-up race workouts that for some reason I decided to count as separate activities. And even though I missed some days completely due to some injuries, I still had almost 40 more runs in this time around. I got hit with a real sharp quad pain around the middle of September, which reared its ugly head again in October, forcing my oh-so-stubborn self to take some days off. I believe that I sustained this injury thanks to my impatience that led to me running my "easy" runs too hard while also not having as long of a base-building period prior to this marathon plan compared to last year.
+There were a lot more runs, and not just miles, in this year's prep. This was pretty much all due to the double days (all of which consisted of double recovery runs), as well as the warm up and cool downs of two tune-up race workouts that, for some reason, I decided to count as separate activities. And even though I missed some days completely due to some injuries, I still had almost 40 more runs in this time around. I got hit with a real sharp quad pain around the middle of September, which reared its ugly head again in October, forcing my oh-so-stubborn self to take some days off. I believe that I sustained this injury thanks to my impatience that led to me running my "easy" runs too hard while also not having as long of a base-building period prior to this marathon plan compared to last year.
 
 #### *Miles*
 
@@ -78,7 +79,7 @@ ggplot(data = philly, aes(x = Distance)) +
   facet_grid(~ MarathonName)
 ```
 
-Just like [last year](https://stevenewns.netlify.com/2017/04/18/marathon-training-plan-data-analysis/), I again can see the actual marathon itself and my one 24 mile run, the longest **Long Run** of the plan, all the way to the right of the plot. It also looks like I had fewer runs that were between 16-18 miles and more runs between 22-24 miles this year. This distribution is, again, right/positively-skewed, with the majority of the runs being less than 12 miles. Also, as expected after choosing a higher mileage plan, the 2017 histogram has taller bars with respect to 2016, indicating a larger number of runs overall, with bars for the same distance being noticeably higher in 2017 compared to 2016.
+Just like [last year](https://stevenewns.netlify.com/2017/04/18/marathon-training-plan-data-analysis/), I again can see the actual marathon itself and my one 24-mile run, the longest **Long Run** of the plan, all the way to the right of the plot. It also looks like I had fewer runs that were between 16-18 miles and more runs between 22-24 miles this year. This distribution is, like lasy year, right/positively-skewed, with the majority of the runs being less than 12 miles. Also, as expected after choosing a higher mileage plan, the 2017 histogram has taller bars with respect to 2016, indicating a larger number of runs overall, with bars for the same distance being noticeably higher in 2017 compared to 2016.
 
 The majority of my runs in this 2017 training block were around 4-6 miles, with the next highest frequency being from 10-12 miles. The fact that most of my runs were from 4-6 miles is not surprising when remembering that the majority of my runs were recovery runs, which went from a minimum of 3 miles up to a maximum of 7 miles, for the most part. Sometimes I combined two recovery runs into one run due time constraints, and more-so to my regrettable obsession with hitting as much of my planned mileage as possible at the expense of truly recovering from hard efforts.
 ```{r, run type counts, echo=F}
@@ -87,10 +88,10 @@ philly %>%
   summarize(Count = n()) %>%
   spread(key = RunCat, value = Count) %>%
   rename("Marathon Name" = MarathonName) %>%
-  kable(caption = "Total Number of Runsby Run Type")
+  kable(caption = "Total Number of Runs by Run Type")
 ```
 
-The above table shows that for 2017, I actually had less workouts, long runs, and middle long runs (runs that're longer than a "general aerobic" run but shorter than a long run), but more recovery runs and general aerobic runs (If unfamiliar, just think of these a just a run for the sake of running, but "harder" than recovery runs). This makes me think that, had I followed the plan *correctly*, I would've been taking it a bit easier overall in this build-up thanks a higher number of easier runs. I believe the lower numbers for total workouts were due to me missing these runs thanks to my quad injury. For example, let's look at those runs that fall under `Misc`:
+The above table shows that for 2017, I actually had less workouts and middle long runs (runs that're longer than a "general aerobic" run but shorter than a long run), but more long runs, recovery runs, and general aerobic runs (If unfamiliar, just think of these a just a run for the sake of running, but with a bit more effort than recovery runs). This makes me think that, had I followed the plan *correctly*, I would've been taking it a bit easier overall in this build-up thanks a higher number of easier runs. I believe the lower number for total workouts was due to me missing it thanks to my quad injury. For example, let's look at those runs that fall under `Misc`:
 ```{r Misc runs, echo = F}
 philly %>%
   filter(RunCat == "Misc") %>%
@@ -100,7 +101,7 @@ philly %>%
   kable(caption = "Miscellaneous Runs")
 ```
 
-FOur of these runs were the warm up and cool downs to some tune-up race workouts, but the other 2 were runs I kept short due to injury, one physical, one mental. As mentioned earlier, I strained my quad twice in this build-up. I took a couple of days off in each instance, as I started to realize that I didn't have to hit *every* run on the schedule during the span of this plan and pushing through legitimate injury and not just some soreness or a niggle, could have some legit long-term consequences. I can see the periods I took off were highlighted by the empty spaces in the middle of September and October when looking at a plot of runs over time.
+Four of these runs were the warm up and cool downs to some tune-up race workouts, but the other 2 were runs I kept short due to injury, one physical, one mental. As mentioned earlier, I strained my quad twice in this build-up. I took a couple of days off in each instance, as I started to realize that I didn't have to hit *every* run on the schedule during the span of this plan and that pushing through legitimate injury and not just some soreness or a niggle could have some legitimate long-term consequences. I can see the periods I took off were highlighted by the empty spaces in the middle of September and October when looking at a plot of runs over time.
 ```{r show rest days, echo=F, fig.align='center'}
 philly %>%
   filter(Marathon == "ph17") %>%
@@ -115,9 +116,9 @@ philly %>%
                              as.POSIXct("2017-10-25", format = "%Y-%m-%d")))
 ```
 
-That *very* tiny bar around September 14th was where I hurt my quad for the first time within a mile and a half of the planned run, with the run the following day being cut short after 10 miles of a planned 12 miles when the pain came biting back (again, due to my stubbornness with not missing runs). Then again, in the second half of October, the same pain resurfaced right before a tune-up race workout, so I took two days off to be safe and avoid any further aggravation of my quad so as to not miss another workout.
+That *very* tiny bar around September 14th was where I hurt my quad for the first time within a mile and a half of the planned run for that day, with the run the following day being cut short after 10 miles of a planned 12 miles when the pain came biting back (again, due to my stubbornness for not missing runs). Then again, in the second half of October, the same pain resurfaced right before a tune-up race workout, so I took two days off to be safe and avoid any further aggravation of my quad so as to not miss another workout.
 
-Next, I wanted to look at the summary of both marathons plans' overall distance data:
+Next, I wanted to look at the quick summary of both marathon plans' overall distance data:
 ```{r distance summary, echo = F, warning = F, message = F}
 philly %>%
   group_by(MarathonName) %>%
@@ -156,11 +157,11 @@ philly %>%
   kable(caption = "Total Number of Runs in November")
 ```
 
-Looks like I did look to rest up a bit more this year, so maybe I started to learn.
+Looks like I did make an effort to rest up a bit more this year, so maybe I started to learn from some of my mistakes.
 
 #### *Cadence*
 
-Last year, my cadence generally increased month over month, albeit *barely*, and ended up averaging between 170 and 180.
+Last year, my cadence generally increased month over month, and ended up averaging between 170 and 180.
 ```{r cadence by month, echo=F, fig.align='center'} 
 ggplot(data = philly, aes(Month, Avg.Cadence)) + 
   geom_jitter(aes(colour = Month)) +
@@ -169,13 +170,13 @@ ggplot(data = philly, aes(Month, Avg.Cadence)) +
   scale_fill_brewer(palette = "Set1") +
   theme_bw() + 
   xlab("") + 
-  ylab("Avg. Cadence (Steps/Min)") + 
+  ylab("Avgerage Cadence (Steps/Min)") + 
   theme(legend.position = "none") + 
   ggtitle("Average Cadence by Month") + 
   facet_grid(~ MarathonName)
 ```
 
-I had a much more consistent cadence this year, as indicated by the smaller boxes for each month, and also my median average cadence for each month in 2017 was highest than the highest median average cadence from last year, with the exception of November, which is good. It suggests my running form has become more efficient. But, there was a decrease over those last 2 months. Could this have been due to fatigue? Or to due more speed workouts which included recovery intervals, during which I was quite content to just plod on through, bringing the average cadence down. Either way, my median average cadence was consistently in the high 170's, which is an improvement compared to 2016.
+I had a much more consistent cadence this year, as indicated by the smaller boxes for each month, and also my median average cadence for each month in 2017 was higher than the highest median average cadence from last year, with the exception of November, which, overall, is good. This suggests my running form has become more efficient. But, there was a decrease in average cadence over those last 2 months. Could this have been due to fatigue? Or to due more speed workouts which included recovery intervals, during which I was quite content to just plod on through, bringing the average cadence down. Either way, my median average cadence was consistently in the high 170's, which is an improvement compared to 2016.
 
 Also, I have some significant outliers in those first two months, which I again would assume were mainly recovery runs, as I was mainly concerned with keeping my heart rate down so I could actually recover on them than I was with making sure my cadence was optimal. 
 ```{r check min cadence, echo=F}
@@ -190,12 +191,12 @@ philly %>%
   kable(caption = "10 Runs with Lowest Average Cadence")
 ```
 
-Huh, so my tempo runs, where I would've hoped my cadence would've been higher to better prepare me to run at a higher cadence during the actual marathon, were the only runs with an average cadence lower than 170. This should instruct me to focus more on picking up my pace during these types of workouts in my next build-up so as to better prepare myself to run more efficiently as my speed increases.
+Huh, so my tempo/lactate threshold runs, where I would've hoped my cadence would've been higher to better prepare me to run more efficiently at a quicker pace during the actual marathon, were the only runs with an average cadence lower than 170. This should instruct me to focus more on form and on picking up my pace during these types of workouts in my next build-up so as to better prepare myself to be a more efficient runner as my speed increases.
 
 #### *Heart Rate*
 
-Another metric to look at would be my average heart rate during runs over the course of my training. Compared to the rise of my average cadence, I would hope that my average heart rate would have decreased over time, as my fitness would have increased as a result to higher mileage and an increasing number of workouts.
-```{r heart rate over time, echo=FALSE, fig.align='center'}
+Another metric to look at would be my average heart rate during runs over the course of my training. Compared to the rise of my average cadence, I would hope that my average heart rate would have decreased over time like last year, as my fitness should have increased as a result to higher mileage and an increasing number of workouts.
+```{r heart rate over time, echo=F, fig.align='center'}
 hr16 <- philly %>%
   filter(Marathon == "ph16") %>%
   ggplot(data = , aes(Date, Avg.HR)) + 
@@ -203,7 +204,7 @@ hr16 <- philly %>%
     geom_smooth(method = "lm", se = T, colour = "red") + 
     theme(axis.text.x = element_blank(), legend.position = "none") +
     xlab("2016") + 
-    ylab("Average Heart Rate") + 
+    ylab("Average Heart Rate (BPM)") + 
     ggtitle("Average Heart Rate Over Time") + 
     coord_cartesian(ylim = c(100, 160))
 
@@ -214,13 +215,13 @@ hr17 <- philly %>%
     geom_smooth(method = "lm", se = T, colour = "#338dff") + 
     theme(axis.text.x = element_blank(), legend.position = "none") +
     xlab("2017") + 
-    ylab("Average Heart Rate") + 
+    ylab("Average Heart Rate (BPM)") + 
     coord_cartesian(ylim = c(100, 160))
 
 grid.arrange(hr16, hr17, nrow = 2)
 ```
 
-So, it looks like my average heart rate stayed pretty steady over the course of this plan, with possibly a minuscule increase there at the end. This may lend credence to my hypothesis that I went into the race too beat up, so my heart rate was higher than it would've been had I been fully rested. But, a more positive indication to note is that my average heart rate started and ended at a significant lower amount than last year, indicating that since most of my paces were similar to last year, I was more fit this year, which I would've hoped, even considering a pretty unstructured break from running from the end of 2016's marathon up to this year's base-building in May.
+So, it looks like my average heart rate stayed pretty steady over the course of this plan, with possibly a minuscule increase there at the end. This may lend credence to my hypothesis that I went into the race too beat up, so my heart rate was higher than it would've been had I been fully rested. But, a more positive indication to note is that my average heart rate started and ended at a significant lower amount than last year. This indicates that, given most of my paces were similar to last year, I was more fit this year, which I would've hoped for, even considering I took pretty unstructured break from running from the end of 2016's marathon up to this year's base-building in May.
 
 ```{r HR by month boxplot, echo=F, fig.align='center'}
 ggplot(data = philly, aes(Month, Avg.HR)) + 
@@ -231,15 +232,15 @@ ggplot(data = philly, aes(Month, Avg.HR)) +
   theme_bw() +
   theme(legend.position = "none") + 
   xlab("Month") + 
-  ylab("Avg. Heart Rate") + 
-  ggtitle("Average Heart Rate per Month") + facet_grid(~ MarathonName)
+  ylab("Average Heart Rate (BPM)") + 
+  ggtitle("Average Heart Rate per Month") +
+  facet_grid(~ MarathonName)
 ```
 
-Opposite to cadence, I had more variance this each month in 2017, but good = 1st 4 months were all lower, less outliers this time, November similar. I would assume it's due to more recovery runs at lower heart rates making these boxes taller
+In contrast to cadence over time, I had more variance in average heart rate for each month in 2017. It's a positive indicator that my average heart rate for the first four months of the plan were all lower, thisi year, and that I had less outliers this time (which menas I was more consistent). But, November 2017 shows a very similar median average heart rate, but quite a signiciant increase in variance. I would assume it's due to more recovery runs at lower heart rates making these boxes taller for each month, as there would be more data points at the bottom-end of the boxes for those type of runs.
 
-Now let's look at cadence and heart rate by Run Type as well for comparisons.
-
-```{r cadence by run type, echo = FALSE, fig.align='center'} 
+Now let's look at cadence and heart rate by run type as well for comparisons.
+```{r cadence by run type, echo=F, fig.align='center'} 
 philly %>%
   filter(RunType != "Race",
          RunType != "Misc") %>%
@@ -251,18 +252,17 @@ philly %>%
     scale_colour_brewer(palette = "Set2") +
     scale_fill_brewer(palette = "Set2") +
     xlab("Run Type") + 
-    ylab("Cadence") + 
+    ylab("Cadence (Steps/Min)") + 
     guides(fill=FALSE) +
     coord_flip() + 
     ggtitle("Cadence per Run Type") +
     facet_grid(~ MarathonName)
 ```
 
-Similar to cadence over time, I had a higher average cadence for each run type, and less variance among each run type, especially in the workout category. I see the my long runs had highest median cadence. This is something I can be happy with, as the length of these runs mimic the marathon the most, so I would hope to keep a higher and more consistent cadence through these runs. My recovery runs had the lowest cadence, which does not surprise me as I find it difficult to keep up cadence and my pace slows down. My workouts were the second lowest this year, but with the most outliers. From my experiences last year, where workouts had the lowest average cadence, I can be quite confident that the recovery jogs between intervals and tempos were the cause of this, similar to how in recovery runs I find it hard to keep up cadence while slowing down, which I am working on in the spring build-up.
+Similar to the pattern of cadence over time for 2016 vs. 2017, I had a higher average cadence for each run type this year, and less variance among each run type, especially in the workout category. I see the my long runs had highest median cadence. This is something I can be happy with, as the length of these runs mimic the marathon the most, so I would hope to keep a higher and more consistent cadence through these runs. My recovery runs had the lowest cadence, which does not surprise me as I find it difficult to keep up cadence while my pace slows down. My workouts had the second lowest average cadence this year, but with the most outliers. From my experiences last year, where workouts had the lowest average cadence, I can be quite confident that the recovery jogs between intervals and tempos were the cause of this, similar to how in recovery runs I find it hard to keep up cadence while slowing down. This is one of the key factors I am working on in my spring marathon build-up.
 
-Now I will again check to see the relationship between my average cadence and m average heart rate.
-
-```{r cadence by hr, echo = FALSE, messages = FALSE, fig.align='center'}
+Now, I will again look see if there's a relationship between my average cadence and average heart rate.
+```{r cadence by hr, echo=F, messages=F, fig.align='center'}
 philly %>%
   filter(RunType != "Race",
          RunType != "Misc") %>%  
@@ -271,18 +271,17 @@ philly %>%
     scale_colour_brewer(palette = "Set2") +
     scale_fill_brewer(palette = "Set2") +    
     theme_bw() +
-    xlab("Cadence") + 
-    ylab("Average Heart Rate") + 
+    xlab("Cadence (Steps/Min)") + 
+    ylab("Average Heart Rate (BPM)") + 
     scale_y_continuous(limits = c(110, 160)) +
     ggtitle("Average Heart Rate by Cadence") + 
     facet_grid(~ MarathonName)
 ```
 
-Similar to last year, there is no concrete relationship here. But, we can note that there's again more evidence of the higher  average cadence overall, as most dots are above 170 and hovering near 180 steps per minute. Also, the long runs are (as suggested by the box plot) higher up, while recovery runs are more towards the bottom.
+Similar to last year, there is no concrete relationship here. But, we can note that there's again more evidence of the higher  average cadence overall, as most data points are above 170 steps per minute and hovering near 180 steps per minute. Also, recovery runs are more concentrated at lower average heart rate values.
 
-We can now flip this run type analysis from cadence to hear rate.
-
-```{r heart rate by run type, echo = FALSE, fig.align='center'}
+We can now flip this run type analysis from cadence to heart rate.
+```{r heart rate by run type, echo=F, fig.align='center'}
 philly %>%
   filter(RunType != "Race",
          RunType != "Misc") %>%
@@ -294,21 +293,18 @@ philly %>%
     theme_bw() +
     theme(legend.position = "none") + 
     xlab("Run Type") + 
-    ylab("Avg Heart Rate") + 
+    ylab("Average Heart Rate (BPM)") + 
     guides(fill=FALSE) +
     coord_flip() + 
     ggtitle("Average Heart Rate per Run Type") + 
     facet_grid(~ MarathonName)
 ```
 
-Well, barring those higher outliers in the recovery runs, which I cna only assume are those more "beat-up" runs where I would've been skipping the run and fully recovering between those harder efforts. But, I was much better at keeping my hear rate lower this time around druing recovery runs and doing so at a relatilvey more consistent rate. Average heart rate decreased a but more this year, but was also a bit more variable, while my genearl aerobic runs increased in variety quite a bit. I would assume this is due to some middle-long runs I remember being more difficult than they should've been. 
-
-workout hear rate similar good b/c usually have targets to higt, low variance, much lower vraiance in recovery = more consistenet even if run too hard, long runs a bit more varies this year, GA much more varies. Overall each run type lower
+Average heart rate decreased a bit this year for each type of run, but general aerobic runs increased in variety quite a bit. I would assume this is due to some of the middle-long runs that I wasn't taking as easy as I should've been. Also, looking those higher outliers in the recovery runs, I can only assume are those more "beat-up" runs where I should've been skipping the run and fully recovering between harder efforts. But overall, I was much better at keeping my heart rate lower this year around during recovery runs, and while doing so at a relatively more consistent rate. My average workout heart rate was similar to last year, which is nice. These runs in the book have some suggested targets to hit, so it looks like I was able to do so.
 
 ### *Pace*
 
-Let's now check out my average pace over time, split out by Run Type. I would hope that it would have decreased, just as average heart rate did, due to both increased form and increased fitness, as well as possibly due to decreased outside temperatures making it easier to run faster. 
-
+Let's now check out my average pace over time, split out by run type. I would hope that, similar to average hear rate, it would have decreased due to both better form and increased fitness compared to last year as well as hopefully compared to the beginning of this year. The decreased in outside temperatures may have also made it easier to run faster, as the body wouldn't be so concerend with cooling itself off and could focus just of the physical demands of running.
 ```{r avg pace by runs, echo = F, message = F, warning = F, fig.align='center'}
 philly %>%
   filter(RunType != "Race",
@@ -323,18 +319,19 @@ philly %>%
     scale_fill_brewer(palette = "Set2") +   
     theme_bw() +
     theme(axis.text.x = element_blank()) +
-    xlab("Date") + 
+    xlab("Time") + 
     ylab("Average Pace (mile/minute)") + 
     ggtitle("Average Pace Over Time") +
     facet_grid(~ MarathonName)
 ```
 
-It looks like the recovery runs slowed down the pace there as I approached the midpoint of the plan, but sped back up a tad at the end, but overall I kept them slower this year and more consitent. My other three types of runs were also slower, indicating that got better at taking it a bit easier during my runs this year, and I was much more consistent in my long runs. There was an uptick in the last third of the plan in general aerobic runs, but not as gradual as an increase. Long runs were more consistent, with some decrease, while workouts had a bit of a similar shape to last year but with a smoother curve. It also looks like one could indicate the different phases of workouts. We started with tempo runs, so I was going at a pretty quick pace with no rests, so the pace was pretty high. Then I moved into speed workouts, which involved intervals with recovery jogs between. I took the recovery pretty seriously, so I slowed down quite a bit, which looks to have brought the average pace down. Then, as I moved to more race-specific workouts, the pace began to pick up again.
+It looks like the recovery runs slowed down the pace as I approached the midpoint of the plan, but sped back up a tad at the end. Overall, I kept them slower this year and more consistent, as noted by the less severe curvature. My other three types of runs were also slower this year, indicating that I got better at pacing myself it a bit easier during my runs this year. But I don't think it was enough when considering the fatigue I felt this year. There was an uptick in the last third of the plan in general aerobic and middle-long runs, but not as gradual as the increase from last year. Long run paces were more consistent, with some decrease in speed as time went on, while workouts had a bit of a similar shape to last year but with a smoother curve. 
+
+It also looks like one could discern the different phases of workouts over time. I started with tempo runs, so I was going at a pretty quick pace with no rests, so the overall average pace was relatively pretty high. Then I moved into speed workouts, which involved intervals with recovery jogs between. I took the recovery pretty seriously, so I slowed down quite a bit, which looks to have brought the average pace down. Then, as I moved to more race-specific workouts, the pace began to pick up again.
 
 ### *Elevation*
 
-Let's see if my elevation gain had any affect on my average heart rate. I expect that it would, since a larger eleveation gain meant I was climbing more, which requires more exertion, so I expect my average heart rate to be higher with a higher elevation gain.
-
+Let's see if my elevation gain had any affect on my average heart rate. I expect that it would, since a larger eleveation gain meant I was climbing more, which required more exertion from me as I wasn't that adept at adapting my pace to account for the gradient increases and decreases.
 ```{r elevation and avg hr, echo=F, message=F, fig.align='center'}
 philly %>%
   filter(RunType != "Race",
@@ -350,29 +347,34 @@ philly %>%
     facet_grid(~ MarathonName)
 ```
 
-There does seem to be a slight trend of a sort-of linear increase in heart rate after arbout 300 ft. of gain for this year. as in crease in BPM as elevation gain increases. I decided to see if this had anything to do with the distance.
+There does seem to be a slight trend of a sort-of linear increase in heart rate after about 300 ft. of total gain in 2017. I'm not surprise to see the increase in average heart rate as elevation gain increased because of the change in required exertion, and as this also suggests longer runs which brings cardiac drift into play.
 
-It appears that Philadelphia is flatter than my little suburb, Chalfont, as noted by the fact that most points for 2017 are below 250 ft. of total elevation gain. But, it's also worth noting that the top four runs in terms of elevation gain were from 2017. I am certain that this was due to the fact that my longer runs in the training block took me through Forbidden Drive and the Wissahickon Valley Park Trail, which involved rolling hills througout. So while there may have been some more gain in the earlier parts of my runs back in the suburbs, as I went longer on some nice trails and hills, my elevation gain sigificantly increased.
+Also, it appears that Philadelphia and the Kelly Drive trails are flatter than Chalfont, as noted by the fact that most data points for 2017 are below 250 feet of total elevation gain. But, it's also worth noting that the overall top four runs in terms of elevation gain were from 2017. I am certain that this was due to the fact that my longer runs in this year's training block took me through Forbidden Drive and the Wissahickon Valley Park Trail, which involved rolling hills througout. So while there may have been some more gain in the earlier parts of my runs back in the suburbs, as I went longer on some nice trails and hills, my elevation gain significantly increased.
 ```{r distance and avg hr, echo=F, message=F, warning=F, fig.align='center'}
 philly %>%
   filter(RunType != "Race",
          RunType != "Misc") %>%
-  ggplot(aes(Distance, Elev.Gain)) + 
+  ggplot(aes(Elev.Gain,Distance)) + 
     geom_point(aes(color = MarathonName)) +
     geom_smooth(fill = NA, na.rm = TRUE) +
     scale_colour_manual(values = c("red","#338dff")) + 
     theme_bw() + 
     theme(legend.position = "none") +
-    xlab("Elevation Gain (ft.)") + 
-    ylab("Distance (mi)") +
-    ggtitle("Average Heart Rate by Total Distance") +
+    xlab("Distance (mi)") + 
+    ylab("Elevation Gain (ft.)") +
+    ggtitle("Elevation Gain by Total Distance") +
     facet_grid(~ MarathonName)
 ```
 
 Indeed, at just under what would be the halfway point of a marathon, we see the start of a linear increase in elevation as distance increased. This is something I should keep in mind while planning my runs for the Pittsburgh marathon this May, which involves a sharp hill about halfway through the race and continues with rolling hills throughout the second half of the race. Yippee. 
 
 ## Conclusion
-That's all I can think of to check out so far. If you're reading this and can think of anything else, let me know on [Twitter](https://twitter.com/s_newns92) or [GitHub](https://github.com/newns92).
+
+After looking at this data, I'd say I got better at running my recovery runs slower than last year, but it may not have been enough to fully get the benefits out of a ture *recovery* run. I also believe I ran my other runs a bit too hard, also delaying full recovery between hard efforts. I was able to get much more consistent with my paces, and improved my ability to maintain a lower heart rate at comparable paces. I also believe that my flatter training my have kept me from being to strong enough to hit hills hard enough during the race, and this forced me to slow down my pace compared to my original goal.
+
+I think that having 2 marathons under my belt has now bolstered me to be able to listen to my body and to know what is needed to break that 3 hour marathon goal that I originally set for myself back in the beginning of 2016. I'm signed up for the Pittburgh marathon this upcoming May, and this marathon has a killer hill at the halfway point, and rolling hills for the rest of the race. This means I'm going to need to search out routes around me that incoporate similar terrain so I can get as race-specific training as possible.
+
+If you've actually read this far down and have any suggestions or questions, let me know on [Twitter](https://twitter.com/s_newns92) or [GitHub](https://github.com/newns92).
 
 The code for this can be found [here](https://github.com/newns92/MarathonTrainingAnalysis/blob/master/Files/R_Analysis_script.R), as well as the code for the [cleaning and initial creation of the dataset](https://github.com/newns92/MarathonTrainingAnalysis/blob/master/Files/R_CleaningScript.R) (WARNING: Please excuse it ugliness, it was before I was aware of the tidyverse.)
  speed not staming into stamina not speed
