update cleaning script and links to code in write-up

--- a/Files/2017/R_Analysis_Markdown_17.Rmd
+++ b/Files/2017/R_Analysis_Markdown_17.Rmd
@@ -370,11 +370,10 @@ Indeed, at just under what would be the halfway point of a marathon, we see the 
 
 ## Conclusion
 
-After looking at this data, I'd say I got better at running my recovery runs slower than last year, but it may not have been enough to fully get the benefits out of a ture *recovery* run. I also believe I ran my other runs a bit too hard, also delaying full recovery between hard efforts. I was able to get much more consistent with my paces, and improved my ability to maintain a lower heart rate at comparable paces. I also believe that my flatter training my have kept me from being to strong enough to hit hills hard enough during the race, and this forced me to slow down my pace compared to my original goal.
+After looking at this data, I'd say I got better at running my recovery runs slower than last year, but it may not have been enough to fully get the benefits out of a ture *recovery* run. I also believe I ran my other runs a bit too hard, also delaying full recovery between hard efforts. I was able to get much more consistent with my paces, and improved my ability to maintain a lower heart rate at comparable paces. I also believe that my flatter training my have kept me from being to strong enough to hit hills hard enough during the race, and this forced me to slow down my pace compared to my original goal. I felt that I also lost some speed even though I improved my muscular endurance.
 
-I think that having 2 marathons under my belt has now bolstered me to be able to listen to my body and to know what is needed to break that 3 hour marathon goal that I originally set for myself back in the beginning of 2016. I'm signed up for the Pittburgh marathon this upcoming May, and this marathon has a killer hill at the halfway point, and rolling hills for the rest of the race. This means I'm going to need to search out routes around me that incoporate similar terrain so I can get as race-specific training as possible.
+I think that having 2 marathons under my belt has now bolstered me to be able to listen to my body and to know what is needed to break that 3 hour marathon goal that I originally set for myself back in the beginning of 2016. I'm signed up for the Pittburgh marathon this upcoming May, and this marathon has a killer hill at the halfway point, and rolling hills for the rest of the race. This means I'm going to need to search out routes around me that incoporate similar terrain so I can get as race-specific training as possible. So, my goals for my current training block are to incorporate more hills, improve uphill and downhill running form, and to incorporate more strides to get more comfortable with faster leg turnover to get that speed back.
 
 If you've actually read this far down and have any suggestions or questions, let me know on [Twitter](https://twitter.com/s_newns92) or [GitHub](https://github.com/newns92).
 
-The code for this can be found [here](https://github.com/newns92/MarathonTrainingAnalysis/blob/master/Files/R_Analysis_script.R), as well as the code for the [cleaning and initial creation of the dataset](https://github.com/newns92/MarathonTrainingAnalysis/blob/master/Files/R_CleaningScript.R) (WARNING: Please excuse it ugliness, it was before I was aware of the tidyverse.)
- speed not staming into stamina not speed
+The code for all plots and tables in this write-up can be found [here](https://github.com/newns92/MarathonTrainingAnalysis/blob/master/Files/2017/R_Analysis_script_17.R), and the code for the cleaning and initial creation of the dataset [here](https://github.com/newns92/MarathonTrainingAnalysis/blob/master/Files/2017/R_CleaningScript_17.R).
