--- a/Files/2017/R_Analysis_Markdown_17.Rmd
+++ b/Files/2017/R_Analysis_Markdown_17.Rmd
@@ -1,22 +1,34 @@
 ---
-title: "Philly Marathon 2017: Training Plan Data Analysis"
+title: 'Philly Marathon 2017: Training Plan Data Analysis'
 author: "Steve Newns"
-date: 2017-1-29T21:09:30
-categories: ["R"]
-tags: ["R Markdown","plot","running","marathon","philadelphia","distance running","training","rstats"]
+date: "2017-1-29T21:09:30"
+output: pdf_document
+tags:
+- R Markdown
+- plot
+- running
+- marathon
+- philadelphia
+- distance running
+- training
+- rstats
+categories: R
 ---
 
 Marathons hurt and wind is the embodiment of all that is evil. That's what I've learned from the two marathons I've run thus far. My case in point:
 
 <center>
 *1st Marathon ever:*
+<br>
 ![](./strava_marathon_16.PNG)
 
 *Not much has changed:*
+<br>
 ![](./strava_marathon_17.PNG)
 </center>
 <br>
 <br>
+
 So, last year, I followed the 18-week, 55-70 mile peak week plan from [<u>Pete Pfitzinger's Advanced Marathoning</u>](https://smile.amazon.com/Advanced-Marathoning-2nd-Pete-Pfitzinger/dp/0736074600). I blew up pretty bad around mile 20 to mile 22 (I don't remember, exactly, as my mind was busy focusing on the fact that  *it*. *hurt.*) This is apparently typical of first-time marathoners who aren't experienced enough to know if/when they'll hit the dreaded Wall and are typically not prepared to mentally and physically deal with it. And I was not. I fully remember my calves screaming and my hips almost fully tightening up in that last 10k, and from this I just assumed that maybe I just didn't have the muscular endurance to last the whole race at a consistent pace. For the majority of the race, I felt I was going to be able to maintain the comfortably-hard 6:50 minute per mile pace until the finish, and then I entered the pain cave. 
 
 I decided to go with a higher mileage plan this year in hopes of remedying this, so I went with a sort-of ad-hoc modification based off of the 18 week/85 mile and 18 week/more than 85 mile plans from the same book, with most of the workouts taken as-is from the 85+ mile plan, with some extra miles here and there on some runs depending on how I felt at the time.
